--- a/templates/platform.html
+++ b/templates/platform.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="card navbar-bg-color text-dark text-start rounded-0">
-            <div class="card-body"><a href="#"><img width="30px" src="{{user_profile.profileimg.url}}" alt="" class="mr-2 rounded-circle"><span
+            <div class="card-body"><a href="{% url 'dashboard' request.user.username %}"><img width="30px" src="{{user_profile.profileimg.url}}" alt="" class="mr-2 rounded-circle"><span
                   class="card_font" style="text-transform: capitalize;">{{user.first_name}} {{user.last_name}}</span></a></div>
             <div class="card-body"><a href="#"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-2"><span
                   class="card_font">Arkadaşlar</span></a></div>
@@ -40,7 +40,7 @@
           <div
             class="pt-3 card navbar-bg-color text-dark text-start row list-group list-group-horizontal border border-black rounded-0 ">
             <div class="input-group m-3">
-              <a href="{% url 'dashboard' post.user %}"><img width="30px" src="{{post.user.profileimg.url}}" alt="" class="mx-2"><span class="card_font">{{post.user}}</span></a>
+              <a href="/dashboard/{{post.user}}"><img width="30px" src="{{post.user.profileimg.url}}" alt="" class="mx-2"><span class="card_font">{{post.user}}</span></a>
             </div><!-- CARD-HEADER END -->
             <div class="card-body col-sm-12 list-group-item border-0 navbar-bg-color px-5">
               <img src="{{post.image.url}}" alt="" class="border border-1 border-black mb-3 center">
@@ -68,9 +68,7 @@
           <div
             class="pt-3 card navbar-bg-color text-dark text-start row list-group list-group-horizontal border border-black rounded-0 ">
             <div class="input-group m-3">
-              <a href="/dashboard/{{post.user}}">
-                <img width="30px" src="{{post.user.profileimg.url}}" alt="" class="mx-2"><span class="card_font">{{post.user}}</span>
-              </a>
+              <a href="/dashboard/{{post.user}}"><img width="30px" src="{{post.user.profileimg.url}}" alt="" class="mx-2"><span class="card_font">{{post.user}}</span></a>
             </div><!-- CARD-HEADER END -->
             <div class="card-body col-sm-12 list-group-item border-0 navbar-bg-color px-5">
               <p class="p-font">{{post.caption}}</p>
@@ -99,19 +97,21 @@
         </div> <!-- COL-SM-6 END -->
         <div class="col-sm-3">
           <div class="card navbar-bg-color text-dark text-start rounded-0">
-            <div class="card-body li_font"><b>Kişiler</b><button type="button" class="btn float-end" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-solid fa-magnifying-glass float-end"></i></button></div>
+            <div class="card-body li_font"><b>Kişiler</b>
+              <button type="button" class="btn float-end" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
             {% for suggestion in suggestions_username_profile_list %}
-            <div class="card-body m-0">
+            <div class="card-body">
               <a href="{% url 'dashboard' suggestion %}">
-              <img width="30px" src="{{suggestion.profileimg.url}}" alt="" class="mr-2">
-              <span class="card_font">{{suggestion}}</span>
-            </a>
+                <img width="30px" src="{% static 'Images/user.png' %}" alt="" class="mr-2">
+                <span class="card_font">{{suggestion}}</span>
+              </a>
             </div>
             {% endfor %}
           </div> <!-- CARD END / KISILER --> 
 
           <div class="card navbar-bg-color text-dark text-start rounded-0 mt-3">
-            <div class="card-body li_font"><b>Sohbet Grupları</b><button type="button" id="search_button"><i class="fa-solid fa-magnifying-glass float-end"></i></button></div>
+            <div class="card-body li_font"><b>Sohbet Grupları</b><a href="#"><i class="fa-solid fa-magnifying-glass float-end"></i></a></div>
             <div class="card-body pt-0">
               <a href="#">
                 <i class="fa-solid fa-plus mr-1 border border-black rounded rounded-circle p-1"></i>
@@ -122,29 +122,35 @@
         </div> <!-- COL-SM-3 END -->
       </div> <!-- ROW END -->
     </div> <!-- CONTAINER END -->
-    <form action="/search" method="POST">
-      {% csrf_token %}
-    <div class="modal" tabindex="-1" id="exampleModal">
+
+    <div id="message_box">
+      
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Kullanıcı Aratın</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-            {{csrf_token}}
+          <form action="/search" method="POST">
+            {% csrf_token %}
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="searchModalLabel">Kullanıcı Adı İle Arayın</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
             <div class="modal-body">
               <div class="input-group flex-nowrap">
-                <button type="submit" class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-magnifying-glass float-end"></i></button>
-                <input type="text" class="form-control" placeholder="Kullanıcı Adı İle Aratın" name="username" aria-describedby="addon-wrapping">
+                <input name="username" type="text" class="form-control" placeholder="Kullanıcı Adı İle Aratın"
+                  aria-describedby="addon-wrapping">
               </div>
             </div>
             <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
               <button type="submit" class="btn btn-primary">Ara</button>
             </div>
         </div>
+        </form>
       </div>
     </div>
-  </form>
 
 
   <script src="https://kit.fontawesome.com/03397e9a7e.js" crossorigin="anonymous"></script>
@@ -192,8 +198,6 @@
             reader.readAsDataURL(input.files[0]);
         }
     }
-    var search_button = document.querySelector("#search_button")
-
   </script>
   </body>
 </html>
