--- a/templates/posts.html
+++ b/templates/posts.html
@@ -83,52 +83,17 @@
 
         <div class="col-sm-3">
           <div class="card navbar-bg-color text-dark text-start rounded-0">
-            <div class="card-body li_font"><b>Kişiler</b><a href="#"><i class="fa-solid fa-magnifying-glass float-end"></i></a></div>
-            <div class="card-body">
-              <a href="#">
-              <img width="30px" src="{% static 'Images/user.png' %}" alt="" class="mr-2">
-              <span class="card_font">Meriç Kaya</span>
-            </a>
-            <a href="#">
-              <i class="fa-solid fa-user-plus float-end"></i>
-            </a>
+            <div class="card-body li_font"><b>Kişiler</b>
+              <button type="button" class="btn float-end" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
+            {% for suggestion in suggestions_username_profile_list %}
             <div class="card-body">
-              <a href="#">
+              <a href="{% url 'dashboard' suggestion %}">
                 <img width="30px" src="{% static 'Images/user.png' %}" alt="" class="mr-2">
-                <span class="card_font">Meriç Kaya</span>
-              </a>
-              <a href="#">
-                <i class="fa-solid fa-user-plus float-end"></i>
+                <span class="card_font">{{suggestion}}</span>
               </a>
             </div>
-            <div class="card-body">
-              <a href="#">
-                <img width="30px" src="{% static 'Images/user.png' %}" alt="" class="mr-2">
-                <span class="card_font">Meriç Kaya</span>
-              </a>
-              <a href="#">
-                <i class="fa-solid fa-user-plus float-end"></i>
-              </a>
-            </div>
-            <div class="card-body">
-              <a href="#">
-                <img width="30px" src="{% static 'Images/user.png' %}" alt="" class="mr-2">
-                <span class="card_font">Meriç Kaya</span>
-              </a>
-              <a href="#">
-                <i class="fa-solid fa-user-plus float-end"></i>
-              </a>
-            </div>
-            <div class="card-body">
-              <a href="#">
-                <img width="30px" src="{% static 'Images/user.png' %}" alt="" class="mr-2">
-                <span class="card_font">Meriç Kaya</span>
-              </a>
-              <a href="#">
-                <i class="fa-solid fa-user-plus float-end"></i>
-              </a>
-            </div>
+            {% endfor %}
           </div> <!-- CARD END / KISILER --> 
 
           <div class="card navbar-bg-color text-dark text-start rounded-0 mt-3">
@@ -148,11 +113,11 @@
       
     </div>
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
         <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Post Düzenleme</h1>
+            <h1 class="modal-title fs-5" id="editModalLabel">Post Düzenleme</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -172,20 +137,40 @@
                                     id="selectedImage">
                             </label>
                         </div>
-                        <div class="list-group list-group-item border-0">
-                            <button type="submit" class="btn btn-outline-primary">Yükle</button>
-                        </div>
-                
                     </div> <!-- CARd END -->
                 </form> 
             
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
         </div>
         </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <form action="/search" method="POST">
+            {% csrf_token %}
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="searchModalLabel">Kullanıcı Adı İle Arayın</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group flex-nowrap">
+                <input name="username" type="text" class="form-control" placeholder="Kullanıcı Adı İle Aratın"
+                  aria-describedby="addon-wrapping">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+              <button type="submit" class="btn btn-primary">Ara</button>
+            </div>
+        </div>
+        </form>
+      </div>
     </div>
   <script src="https://kit.fontawesome.com/03397e9a7e.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
