--- a/templates/platform.html
+++ b/templates/platform.html
@@ -50,7 +50,7 @@
               <div class="col-sm-2 list-group-item m-2 pb-3 p-0 border-0 navbar-bg-color"><a href="/like-post?post_id={{post.id}}"><i
                     class="fa-regular fa-thumbs-up navbar-bg-color mr-1"></i><span class="card_font">Beğen</span></a></div>
               <div class="col-sm-3 list-group-item m-2 pb-3 mx-0 p-0 border-0 navbar-bg-color">
-                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#commentModal">
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#commentModal{{ post.id }}">
                   <i class="fa-regular fa-comment navbar-bg-color mr-1"></i>
                   <span class="card_font">Yorum Yap</span>
                 </button>
@@ -79,7 +79,7 @@
             <div class="card-footer list-group list-group-horizontal border-0 navbar-bg-color justify-content-center">
               <div class="col-sm-2 list-group-item  p-0 border-0 navbar-bg-color"><a href="/like-post?post_id={{post.id}}"><i
                     class="fa-regular fa-thumbs-up navbar-bg-color mr-1"></i><span class="card_font">Beğen</span></a></div>
-              <div class="col-sm-3 list-group-item  mx-0 p-0 border-0 navbar-bg-color"><button data-bs-toggle="modal" data-bs-target="#commentModal"><i
+              <div class="col-sm-3 list-group-item  mx-0 p-0 border-0 navbar-bg-color"><button data-bs-toggle="modal" data-bs-target="#commentModal{{ post.id }}"><i
                     class="fa-regular fa-comment navbar-bg-color mr-1"></i><span class="card_font">Yorum Yap</span></button>
               </div>
               <div class="col-sm-3 list-group-item  mx-0 p-0 border-0 navbar-bg-color"><a href="#"><i
@@ -155,29 +155,31 @@
       </div>
     </div>
     <!-- CommentModal -->
-    <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
+    {% for post in posts reversed %}
+    <div class="modal fade" id="commentModal{{ post.id }}" tabindex="-1" aria-labelledby="commentModalLabel{{ post.id }}" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <form action="/comment" method="POST">
             {% csrf_token %}
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="commentModalLabel">Yorum Yap</h1>
+              <h1 class="modal-title fs-5" id="commentModalLabel{{ post.id }}">Yorum Yap</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
               <div class="input-group flex-nowrap">
-                <input name="comment" type="text" class="form-control" placeholder="Yorumunuzu Yazın">
-                  aria-describedby="addon-wrapping">
+                <input type="hidden" name="post_id" value="{{ post.id }}">
+                <input name="comment" type="text" class="form-control" placeholder="Yorumunuzu Yazın" aria-describedby="addon-wrapping">
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
               <button type="submit" class="btn btn-primary">Yorumu Gönder</button>
             </div>
+          </form>
         </div>
-        </form>
       </div>
     </div>
+{% endfor %}
 
 
   <script src="https://kit.fontawesome.com/03397e9a7e.js" crossorigin="anonymous"></script>
